--- a/gnuradio-runtime/lib/controlport/CMakeLists.txt
+++ b/gnuradio-runtime/lib/controlport/CMakeLists.txt
@@ -73,6 +73,14 @@ list(APPEND gnuradio_runtime_libs
   ${THRIFT_LIBRARIES}
 )
 
+# Add install rule to move example Thrift configuration file into
+# $prefix/etc/gnuradio
+install(
+  FILES ${CMAKE_CURRENT_SOURCE_DIR}/thrift/thrift.conf.example
+  DESTINATION ${SYSCONFDIR}/${CMAKE_PROJECT_NAME}
+  COMPONENT "runtime_runtime"
+)
+
 endif(THRIFT_FOUND)
 endif(ENABLE_CTRLPORT_THRIFT)
 
